applying theme colors